Adding missing pages - Still missing Arc connection

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ publication_year: 2024
 # location of code, the full url to your github repository
 source-code: https://github.com/fcabrera23/EW-24-Workshop1/
 # content license (typically "cc by-sa"), displayed in sidebar
-content_license: "MIT"
+content_license: ""
 # URL to the content license
 content_license_link: https://github.com/fcabrera23/EW-24-Workshop1/?tab=MIT-1-ov-file#readme
 ##########
